--- a/ui/src/app/views/projectv2/run/run-test.html
+++ b/ui/src/app/views/projectv2/run/run-test.html
@@ -2,6 +2,6 @@
 <div class="close" (click)="clickClose()">
 	<span nz-icon nzType="close" nzTheme="outline"></span>
 </div>
-<ng-container *ngIf="selectedTab && selectedTab.key === 'raw'">
-	<nz-code-editor #editor [ngModel]="resultRaw" [nzEditorOption]="editorOption"></nz-code-editor>
+<ng-container *ngIf="selectedTab && selectedTab.key === 'output'">
+	<nz-code-editor #editor [ngModel]="testRaw" [nzEditorOption]="editorOption"></nz-code-editor>
 </ng-container>
