feat(ui): add project activity bar globally
Signed-off-by: richardlt <richard.le.terrier@gmail.com>

--- a/ui/src/app/shared/tabs/tabs.html
+++ b/ui/src/app/shared/tabs/tabs.html
@@ -1,6 +1,6 @@
 <ul nz-menu nzMode="horizontal">
     <ng-container *ngFor="let t of tabs">
-        <li nz-menu-item [nzSelected]="selected.key === t.key" (click)="clickSelect(t)" [nzDisabled]="t.disabled">
+        <li nz-menu-item [nzSelected]="selected && selected.key === t.key" (click)="clickSelect(t)" [nzDisabled]="t.disabled">
             <app-tab [tab]="t"></app-tab>
         </li>
     </ng-container>
