--- a/ui/src/app/shared/resizable-panel/resizable-panel.scss
+++ b/ui/src/app/shared/resizable-panel/resizable-panel.scss
@@ -9,7 +9,8 @@
 
         .grabber {
             height: 100%;
-            width: 9px;
+            width: 10px;
+            border-left: 1px solid;
             border-right: 1px solid;
             cursor: col-resize;
             flex-direction: row;
@@ -32,13 +33,14 @@
 
         .grabber {
             width: 100%;
-            height: 9px;
+            height: 10px;
+            border-top: 1px solid;
             border-bottom: 1px solid;
             cursor: row-resize;
             flex-direction: column;
 
             i {
-                margin-top: -5px;
+                margin-top: -6px;
                 font-size: 1.4em;
             }
         }
@@ -58,7 +60,7 @@
 
         :host-context(.night) & {
             background-color: $darkBackground;
-            border-color: $darkTheme_grey_1 !important;
+            border-color: #303030 !important;
         }
     }
 
