fix(ui): display project v2 banner
Signed-off-by: richardlt <richard.le.terrier@gmail.com>

--- a/ui/src/app/views/navbar/navbar.html
+++ b/ui/src/app/views/navbar/navbar.html
@@ -8,7 +8,7 @@
             {{ 'navbar_projects' | translate }}
         </a>
         <nz-select *ngIf="selectedProjectKey" nzShowSearch [ngModel]="selectedProjectKey"
-            (ngModelChange)="navigateToProject($event)">
+            (ngModelChange)="navigateToProject($event)" [class.not-dark]="!darkActive">
             <nz-option *ngFor="let p of projects" [nzLabel]="p.name" [nzValue]="p.key"></nz-option>
         </nz-select>
 
