--- a/ui/src/app/views/project/project.html
+++ b/ui/src/app/views/project/project.html
@@ -1,4 +1,4 @@
-<div class="banner" *ngIf="v2Enabled">
+<div class="banner" *ngIf="v2BannerVisible">
     CDS Ascode v2 is enabled for this project. It is currently in active development, some features may be missing or
     incomplete.
     <div class="close" (click)="clickCloseBanner()">
